--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>erengorkemsahin</title>
+    <link rel="icon" type="image/x-icon" href="C:\Users\grkem\OneDrive\Masaüstü\Code\WebSiteDeneme\img\logo.svg">
     <link rel="stylesheet" type="text/css" href="style.css">
+
 
     <!---box icons link--->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -175,21 +177,21 @@
             </div>
 
 
-            <!-- <div class="row">
-                <img src="img/port-2.jpg">
+            <div class="row">
+                <img src="img/portfolio-2.png">
                 <div class="main-row">
                     <div class="row-text">
                         <h5>Website Design</h5>
                     </div>
                     <div class="row-icon">
-                        <i class="ri-github-fill"></i>
+                        <a href="https://github.com/erengorkemsahin"><i class="ri-github-fill"></i></a>
 
                     </div>
                 </div>
-                <h4>Website Development For Dark X </h4>
+                <h4>Portfolio</h4>
             </div>
 
-            <div class="row">
+            <!-- <div class="row">
                 <img src="img/port-3.jpg">
                 <div class="main-row">
                     <div class="row-text">
